// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package designcompose.definition.element;

option java_multiple_files = true;
option java_package = "com.android.designcompose.definition.element";
option optimize_for = LITE_RUNTIME;

message Event {
    string event_name = 1;
    string variant_id = 2;
    string variant_name = 3;
}

message Keyframe {
    int32 frame = 1;
    string variant_name = 2;
}

message KeyframeVariant {
    string name = 1;
    repeated Keyframe keyframes = 2;
}

message ScalableUIComponentSet {
    string id = 1;
    string name = 2;
    string role = 3;
    string default_variant_id = 4;
    map<string, Event> event_map = 5;
    repeated KeyframeVariant keyframe_variants = 6;
    repeated string variant_ids = 7;
}

message ScalableDimension {
    oneof Dimension {
        float points = 1;
        float percent = 2;
    }
}

message Bounds {
    ScalableDimension left = 1;
    ScalableDimension top = 2;
    ScalableDimension right = 3;
    ScalableDimension bottom = 4;
    ScalableDimension width = 5;
    ScalableDimension height = 6;
}

message ScalableUiVariant {
    string id = 1;
    string name = 2;
    bool is_default = 3;
    bool is_visible = 4;
    Bounds bounds = 5;
    float alpha = 6;
    int32 layer = 7;
}

message ScalableUIData {
    oneof data {
        ScalableUIComponentSet set = 1;
        ScalableUiVariant variant = 2;
    }
}
